--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,6 +22,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>LogOutServlet</servlet-name>
+        <servlet-class>servlets.LogOutServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LogOutServlet</servlet-name>
+        <url-pattern>/LogOutServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>FormReaderServlet</servlet-name>
         <servlet-class>servlets.FormReaderServlet</servlet-class>
     </servlet>
