--- a/POM.xml
+++ b/POM.xml
@@ -5,7 +5,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.ukr.vixtibon</groupId>
-    <artifactId>Generator</artifactId>
-    <version>1.0</version>
+    <artifactId>UMS</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat8-maven-plugin</artifactId>
+                <version>2.3-SNAPSHOT</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
