--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -362,4 +362,15 @@
         <url-pattern>/ActionResultPageController</url-pattern>
     </servlet-mapping>
 
+
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>net.ukr.vixtibon.filters.AuthenticationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/Admin/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
