--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -323,6 +323,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>UpdateDisciplinePageController</servlet-name>
+        <servlet-class>net.ukr.vixtibon.servlets.controllers.study_process.discipline.UpdateDisciplinePageController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UpdateDisciplinePageController</servlet-name>
+        <url-pattern>/UpdateDisciplinePageController</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>TeacherPageController</servlet-name>
         <servlet-class>net.ukr.vixtibon.servlets.controllers.persons.teacher.TeacherPageController</servlet-class>
     </servlet>
@@ -370,6 +380,16 @@
     <servlet-mapping>
         <servlet-name>ActionResultPageController</servlet-name>
         <url-pattern>/ActionResultPageController</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ActionResultEmployeeMenuPageController</servlet-name>
+        <servlet-class>net.ukr.vixtibon.servlets.controllers.ActionResultEmployeeMenuPageController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ActionResultEmployeeMenuPageController</servlet-name>
+        <url-pattern>/ActionResultEmployeeMenuPageController</url-pattern>
     </servlet-mapping>
 
 
