--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -333,6 +333,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>ShowInfoDisciplinePageController</servlet-name>
+        <servlet-class>net.ukr.vixtibon.servlets.controllers.study_process.discipline.ShowInfoDisciplinePageController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ShowInfoDisciplinePageController</servlet-name>
+        <url-pattern>/ShowInfoDisciplinePageController</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>TeacherPageController</servlet-name>
         <servlet-class>net.ukr.vixtibon.servlets.controllers.persons.teacher.TeacherPageController</servlet-class>
     </servlet>
