--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -393,6 +393,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>CreateGroupPageController</servlet-name>
+        <servlet-class>net.ukr.vixtibon.servlets.controllers.study_process.group.CreateGroupPageController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>CreateGroupPageController</servlet-name>
+        <url-pattern>/CreateGroupPageController</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>TimetablePageController</servlet-name>
         <servlet-class>net.ukr.vixtibon.servlets.controllers.study_process.timetable.TimetablePageController</servlet-class>
     </servlet>
