--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -443,6 +443,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>UpdateStudentPageController</servlet-name>
+        <servlet-class>net.ukr.vixtibon.servlets.controllers.persons.student.UpdateStudentPageController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UpdateStudentPageController</servlet-name>
+        <url-pattern>/UpdateStudentPageController</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>DeleteStudentPageController</servlet-name>
         <servlet-class>net.ukr.vixtibon.servlets.controllers.persons.student.DeleteStudentPageController</servlet-class>
     </servlet>
