--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -473,6 +473,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>ShowInfoStudentPageController</servlet-name>
+        <servlet-class>net.ukr.vixtibon.servlets.controllers.persons.student.ShowInfoStudentPageController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ShowInfoStudentPageController</servlet-name>
+        <url-pattern>/ShowInfoStudentPageController</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>GroupPageController</servlet-name>
         <servlet-class>net.ukr.vixtibon.servlets.controllers.study_process.group.GroupPageController</servlet-class>
     </servlet>
