--- a/POM.xml
+++ b/POM.xml
@@ -4,9 +4,19 @@
    http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <groupId>net.ukr.vixtibon</groupId>
     <artifactId>UMS</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
+    <name>Institute Management System</name>
+    <url>http://maven.apache.org</url>
 
     <dependencies>
         <dependency>
@@ -14,17 +24,44 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
+
     <build>
+        <finalName>UMS</finalName>
+
 
         <plugins>
+
+
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat8-maven-plugin</artifactId>
                 <version>2.3-SNAPSHOT</version>
                 <configuration>
+                    <path>/UMS</path>
                     <url>http://localhost:8080/manager/text</url>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
