--- a/POM.xml
+++ b/POM.xml
@@ -46,9 +46,17 @@
         </dependency>
     </dependencies>
 
-
     <build>
         <finalName>UMS</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <warName>ROOT</warName>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
