--- a/POM.xml
+++ b/POM.xml
@@ -1,21 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-   http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-
     <groupId>net.ukr.vixtibon</groupId>
-    <artifactId>UMS</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>ums</artifactId>
     <packaging>war</packaging>
-
-    <name>Institute Management System</name>
+    <version>1.0-SNAPSHOT</version>
+    <name>ums</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -28,8 +19,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
